--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,4 +16,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: cd UniPlugin-JVerification-Android/uniplugin_jverification & ./gradlew assembleRelease
+      run: cd UniPlugin-JVerification-Android/uniplugin_jverification & gradlew assembleRelease
