--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,4 +16,5 @@ jobs:
         # The path to the xcworkspace to build. Mutually exclusive with `project`.
         workspace: ./UniPlugin-JVerification-iOS/HBuilder-uniPluginDemo
         # The path to the xcodeproj to build. Mutually exclusive with `workspace`.
+        scheme: "JVerification"
         
