--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,12 +10,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Xcodebuild Action
-      uses: sersoft-gmbh/xcodebuild-action@v1.1
-      with:
-        # The path to the xcworkspace to build. Mutually exclusive with `project`.
-        project: UniPlugin-JVerification-iOS/HBuilder-uniPluginDemo/HBuilder-uniPlugin.xcodeproj
-        # The path to the xcodeproj to build. Mutually exclusive with `workspace`.
-        scheme: "JVerification"
-        # destination: platform=macOS
+      - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
+      - name: Xcodebuild Action
+      - uses: sersoft-gmbh/xcodebuild-action@v1.1
+        with:
+          # The path to the xcworkspace to build. Mutually exclusive with `project`.
+          project: UniPlugin-JVerification-iOS/HBuilder-uniPluginDemo/HBuilder-uniPlugin.xcodeproj
+          # The path to the xcodeproj to build. Mutually exclusive with `workspace`.
+          scheme: "JVerification"
+          # destination: platform=macOS
         
