--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -11,9 +11,9 @@ jobs:
 
     steps:
       - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
-      # - name: Xcodebuild Action
-      - uses: actions/checkout@v2
-      - uses: sherryQwl/jverification-hbuilder-plugin@jg
+      - name: Xcodebuild Action
+      # - uses: actions/checkout@v2
+      # - uses: sherryQwl/jverification-hbuilder-plugin@jg
         with:
           # The path to the xcworkspace to build. Mutually exclusive with `project`.
           project: UniPlugin-JVerification-iOS/HBuilder-uniPluginDemo/HBuilder-uniPlugin.xcodeproj
