--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,16 +8,38 @@ jobs:
   build:
 
     runs-on: macos-latest
-
+    strategy:
+      matrix:
+        destination:
+          - platform=macOS
+          - platform=iOS Simulator,OS=latest,name=iPhone 11
+          - platform=tvOS Simulator,OS=latest,name=Apple TV 4K
+        #skip-testing: [ 'TestProjectTests/FailingTests' ]
+        action: [ test ]
+        use-xcpretty: [ true, false ]
+        include:
+          - destination: platform=watchOS Simulator,OS=latest,name=Apple Watch Series 5 - 44mm
+            skip-testing: ''
+            action: build
+            use-xcpretty: true
+          - destination: platform=watchOS Simulator,OS=latest,name=Apple Watch Series 5 - 44mm
+            skip-testing: ''
+            action: build
+            use-xcpretty: false
     steps:
       - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
       - name: Xcodebuild Action
-      # - uses: actions/checkout@v2
-      # - uses: sherryQwl/jverification-hbuilder-plugin@jg
+      - uses: actions/checkout@v2
+      - uses: sherryQwl/jverification-hbuilder-plugin@jg
         with:
           # The path to the xcworkspace to build. Mutually exclusive with `project`.
           project: UniPlugin-JVerification-iOS/HBuilder-uniPluginDemo/HBuilder-uniPlugin.xcodeproj
           # The path to the xcodeproj to build. Mutually exclusive with `workspace`.
           scheme: "JVerification"
+          destination: ${{matrix.destination}}
+          # skip-testing: ${{matrix.skip-testing}}
+          action: ${{matrix.action}}
+          use-xcpretty: ${{matrix.use-xcpretty}}
           # destination: platform=macOS
+      
         
