--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -11,21 +11,10 @@ jobs:
     strategy:
       matrix:
         destination:
-          - platform=macOS
           - platform=iOS Simulator,OS=latest,name=iPhone 11
-          - platform=tvOS Simulator,OS=latest,name=Apple TV 4K
         #skip-testing: [ 'TestProjectTests/FailingTests' ]
         action: [ test ]
         use-xcpretty: [ true, false ]
-        include:
-          - destination: platform=watchOS Simulator,OS=latest,name=Apple Watch Series 5 - 44mm
-            skip-testing: ''
-            action: build
-            use-xcpretty: true
-          - destination: platform=watchOS Simulator,OS=latest,name=Apple Watch Series 5 - 44mm
-            skip-testing: ''
-            action: build
-            use-xcpretty: false
     steps:
       - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
       #- name: Xcodebuild Action
@@ -40,5 +29,6 @@ jobs:
           action: ${{matrix.action}}
           use-xcpretty: ${{matrix.use-xcpretty}}
           # destination: platform=macOS
-      
+      - name: Check for derived data
+        run: ls ~/Library/Developer/Xcode/DerivedData/ | grep -q '^UniPluginJVerification.framework'      
         
