--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,34 +1,36 @@
-name: Ios CI
+name: CI on Push and Pull Request
 
-on:
+on:  
   push:
     branches: [ jg ]
 
-jobs:
-  build:
 
+jobs:
+  Practice:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        destination:
-          - platform=iOS Simulator,OS=latest,name=iPhone 11
-        #skip-testing: [ 'TestProjectTests/FailingTests' ]
-        action: [ test ]
-        use-xcpretty: [ true, false ]
     steps:
-      - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
-      #- name: Xcodebuild Action
-      - uses: actions/checkout@v2
-        with:
-          # The path to the xcworkspace to build. Mutually exclusive with `project`.
-          project: UniPlugin-JVerification-iOS/HBuilder-uniPluginDemo/HBuilder-uniPlugin.xcodeproj
-          # The path to the xcodeproj to build. Mutually exclusive with `workspace`.
-          scheme: "JVerification"
-          destination: ${{matrix.destination}}
-          # skip-testing: ${{matrix.skip-testing}}
-          action: ${{matrix.action}}
-          use-xcpretty: ${{matrix.use-xcpretty}}
-          # destination: platform=macOS
-      - name: Check for derived data
-        run: ls ~/Library/Developer/Xcode/DerivedData/ | grep -q '^UniPluginJVerification.framework'      
+    - uses: actions/checkout@v1
+    - name: Run a one-line script
+      run: echo Hello, world!
+    - name: Run a multi-line script
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
+    - name: Show what's in the directory
+      run: |
+        ls
+    - name: Show what all is in the parent directory
+      run: |
+        cd ..
+        ls
         
+        
+  iOS:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: iOS
+      run: |
+        cd UniPlugin-JVerification-iOS
+        nuget restore
+        msbuild HBuilder-uniPluginDemo/HBuilder-uniPlugin.xcodeproj /verbosity:normal /t:Rebuild /p:Platform=iPhoneSimulator /p:Configuration=Debug
