--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -28,3 +28,4 @@ jobs:
           # skip-testing: ${{matrix.skip-testing}}
           action: ${{matrix.action}}
           use-xcpretty: ${{matrix.use-xcpretty}}
+      - run: ls -al
