--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -29,3 +29,4 @@ jobs:
           action: ${{matrix.action}}
           use-xcpretty: ${{matrix.use-xcpretty}}
       - run: ls -al
+      - run: find `pwd` -name "*.framework"
