--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ deploy:
   file: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
   skip_cleanup: true
   on:
-    tags: true
+    #tags: true
+    push:
+      branches: [ jg ]
   file: *.tar.gz
   file_glob: true
