--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,15 +5,45 @@ on:
     branches:
       - jg # 在 master 分支发生更新时执行此 action
 
-jobs:
+jobs: 
   draft_release:
-    name: Draft release
+    strategy:
+      matrix:
+        go_version: [1.13]
+        os: [ubuntu-latest]
+    
+    name: release
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go ${{ matrix.go_version }}
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go_version }}
+        id: go
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+          if [ -f Gopkg.toml ]; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+              dep ensure
+          fi
+      - name: Build
+        run: |
+          go build -v -o main .
+      - name: Gzip
+        run: |
+          mkdir hello-word-${{ matrix.os }}
+          cp main hello-word-${{ matrix.os }}
+          tar -czvf hello-word-${{ matrix.os }}.tar.gz hello-word-${{ matrix.os }}
+          
       - uses: release-drafter/release-drafter@v5.11.0
         name: Draft
         with:
           name: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
-          args: jver.tar.gz application/octet-stream
+          args: jver-${{ matrix.os }}.tar.gz application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
