--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,17 +31,16 @@ jobs:
               curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
               dep ensure
           fi
-      - name: Build
-        run: |
-          go build -v -o main .
+ 
       - name: Gzip
         run: |
           mkdir hello-word-${{ matrix.os }}
           cp main hello-word-${{ matrix.os }}
           tar -czvf hello-word-${{ matrix.os }}.tar.gz hello-word-${{ matrix.os }}
           
-      - uses: release-drafter/release-drafter@v5.11.0
-        name: Draft
+
+      - name: Upload to release
+        uses: release-drafter/release-drafter@v5.11.0
         with:
           name: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
           args: jver-${{ matrix.os }}.tar.gz application/octet-stream
