--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,27 +15,11 @@ jobs:
     name: release
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go ${{ matrix.go_version }}
-        uses: actions/setup-go@v1
-        with:
-          go-version: ${{ matrix.go_version }}
-        id: go
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
-
-      - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
-          if [ -f Gopkg.toml ]; then
-              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-              dep ensure
-          fi
- 
+      
       - name: Gzip
         run: |
           mkdir jver-${{ matrix.os }}
-          cp jverification-hbuilder-plugin/nativeplugins/JG-JVerification/ jver-${{ matrix.os }}
+          cp ../../jverification-hbuilder-plugin/nativeplugins/JG-JVerification/ jver-${{ matrix.os }}
           tar -czvf jver-${{ matrix.os }}.tar.gz jver-${{ matrix.os }}
           
 
