--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Gzip
         run: |
           mkdir jver-${{ matrix.go_version }}
-          cp /jverification-hbuilder-plugin/nativeplugins/JG-JVerification/ jver-${{ matrix.go_version }}
+          cp -r /jverification-hbuilder-plugin/nativeplugins/JG-JVerification/ jver-${{ matrix.go_version }}
           tar -czvf jver-${{ matrix.go_version }}.tar.gz jver-${{ matrix.go_version }}
           
 
