--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           
 
       - name: Upload to release
-        uses: release-drafter/release-drafter@v5.11.0
+        uses: JasonEtco/upload-to-release@master
         with:
           name: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
           args: jver-${{ matrix.os }}.tar.gz application/octet-stream
