--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,9 @@ jobs:
     steps:
       
       - name: Gzip
+        
         run: |
+          pwd
           mkdir jver-${{ matrix.go_version }}
           cp test.js jver-${{ matrix.go_version }}
           tar -czvf jver-${{ matrix.go_version }}.tar.gz jver-${{ matrix.go_version }}
