--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,9 @@ jobs:
         
         run: |
           pwd
+          ls -al
           mkdir jver-${{ matrix.go_version }}
-          cp test.js jver-${{ matrix.go_version }}
+          cp ./test.js jver-${{ matrix.go_version }}
           tar -czvf jver-${{ matrix.go_version }}.tar.gz jver-${{ matrix.go_version }}
           
 
