--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,15 +22,15 @@ jobs:
         run: |
           pwd
           ls -al 
-          mkdir jver-${{ matrix.version }}
-          cp ./test.js jver-${{ matrix.version }}
-          tar -czvf jver-${{ matrix.version }}.tar.gz jver-${{ matrix.version }}
+          mkdir jver-${{ matrix.go_version }}
+          cp -r /jverification-hbuilder-plugin/nativeplugins/JG-JVerification/ jver-${{ matrix.version }}
+          tar -czvf jver-${{ matrix.go_version }}.tar.gz jver-${{ matrix.version }}
           
 
       - name: Upload to release
         uses: JasonEtco/upload-to-release@master
         with:
           name: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
-          args: jver-${{ matrix.os }}.tar.gz application/octet-stream
+          args: jver-${{ matrix.version }}.tar.gz application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
