--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload to release
         uses: JasonEtco/upload-to-release@master
         with:
-          name: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
+          # name: jverification-hbuilder-plugin/nativeplugins/JG-JVerification
           args: jver-${{ matrix.version }}.tar.gz application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
