--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ node_js:
 script:
   - npm init -y
 before_deploy:
-  #- export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
   - sudo apt-get -y install zip
   - zip -r jver-$TRAVIS_TAG.zip nativeplugins/ -r
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
   file: 
-    - jver.zip
+    - jver-$TRAVIS_TAG.zip
   skip_cleanup: true
   on:
     branch: jg
