--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,36 +1,44 @@
-name: Release
+
+name: Upload Release Asset
 
 on:
   push:
-    branches:
-      - dev # 在 master 分支发生更新时执行此 action
+    branches: jg
 
-jobs: 
-  release:
-    if: github.repository == 'sherryQwl/jverification-hbuilder-plugin'
-    runs-on: ${{ matrix.os }}
+jobs:
+  build:
+    name: Upload Release Asset
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [1.13]
-        os: [ubuntu-latest]
-    
-    name: release
-    #runs-on: ubuntu-latest
+        version: [1.1.0]
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-
+      - name: Checkout code
+        uses: actions/checkout@v2
+      # - name: Build project # This would actually build your project, using zip for an example artifact
+      #   run: |
+      #     zip --junk-paths my-artifact README.md
       - name: Gzip
         run: |
-          pwd
-          ls -al 
-          mkdir jver-${{ matrix.version }}
-          cp -r nativeplugins/JG-JVerification jver-${{ matrix.version }}
-          tar -czvf jver-${{ matrix.version }}.tar.gz jver-${{ matrix.version }}
+          zip --junk-paths jver-${{ matrix.version }} nativeplugins/
           
-      - name: Upload to release
-        uses: sherryQwl/upload-to-release@master
-        with:
-          args: jver-${{ matrix.version }}.tar.gz application/octet-stream
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: .nativeplugins/
+          asset_name: jver-${{ matrix.version }}
+          asset_content_type: text/plain
