--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           ls -al 
           mkdir jver-${{ matrix.version }}
           cp -r nativeplugins jver-${{ matrix.version }}
-          zip --junk-paths jver-${{ matrix.version }} jver-${{ matrix.version }}
+          zip --junk-paths jver-${{ matrix.version }}.zip jver-${{ matrix.version }}
           
       - name: Create Release
         id: create_release
