--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [1.1.0]
+        version: [ TRAVIS_TAG ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
