--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,6 @@ jobs:
       #     zip --junk-paths my-artifact README.md
       - name: Gzip
         run: |
-          ls -al 
           tar -jcvf jver-${{ matrix.version }}.tar.gz nativeplugins
            
          
@@ -31,10 +30,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          
           tag_name: ${{ github.TRAVIS_TAG }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+           ls -al ${{ github }}
+           
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
