--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [ 1.1.1 ]
+        version: [ 1.1.2 ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -41,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./nativeplugins
-          asset_name: jver-${{ matrix.version }}
+          asset_path: ./nativeplugins/
+          asset_name: jver-${{ matrix.version }}.tar.gz
           asset_content_type: text/plain
