--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,9 @@ name: Upload Release Asset
 
 on:
   push:
-    tags: 
-      - 'v*'
+    branches: jg
+#     tags: 
+#       - 'v*'
 
 jobs:
   build:
